--- a/result.html
+++ b/result.html
@@ -72,8 +72,7 @@
             box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
             margin-inline: 80px; 
             width: 70%;
-            height: 175px; /* Set the height of the message box */ 
-            overflow: auto; 
+            height: 175px; /* Set the height of the message box */  
         }
         .message-box textarea {
             background-color: #7696b6; /* Textarea background color */
@@ -81,7 +80,6 @@
             border: none; /* Remove border from textarea */
             resize: none; /* Disable resizing of textarea */
             height: 150px;
-            overflow: hidden;
         }
         h1 {
             font-size: 25px;
@@ -172,6 +170,9 @@
         h3{
             font-size: 20px;
             color: rgb(39, 104, 179)
+        }
+        .text {
+            flex: 1;
         }
     </style>
 </head>
