--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <div class="cards hidden" id="encode-form">
             <div>
             <p>!..Choose the file which you want to keep secret and enter secret message then click on Encode button..!</p>
-            <header>**Make sure that, If you cpy-paste ur format must be integar**</header></div>
+            </div>
             <div class="section-card p-3 animate-fadeIn">
                 
                 <div class="section-card-content">
