--- a/select.html
+++ b/select.html
@@ -20,7 +20,12 @@
         <label for="decode-file">Select file:</label>
         <input type="file" name="file" id="decode-file"><br>
         <button type="submit">Decode</button>
-    </form>    
+    </form>   
+    <form id="login-form" action="{{ url_for('login') }}" method="post">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form> 
     <a href="{{ url_for('index') }}">Back</a>
 </body>
 </html>
